--- a/WaitTimes/WaitLanes/templates/WaitLaneView.html
+++ b/WaitTimes/WaitLanes/templates/WaitLaneView.html
@@ -1,8 +1,8 @@
 {% extends "WaitLanesBase.html" %}
-{% load staticfiles %}
 {% block scripts %}
 	{{ block.super }}
-	<script src="{% static "/js/WaitLanes.js"%}"></script>
+	{% load staticfiles %}
+	<script src="{% static "js/WaitLanes.js"%}"></script>
 {% endblock %}
 {% block base-main %}
 	{% load widget_mod %}
