now showing maps with layers in them for wait lane view, but fixme: need to zoom to max extent

--- a/WaitTimes/WaitLanes/templates/WaitLaneView.html
+++ b/WaitTimes/WaitLanes/templates/WaitLaneView.html
@@ -4,6 +4,9 @@
 	{% load staticfiles %}
 	<script src="{% static "js/WaitLanes.js"%}"></script>
 {% endblock %}
+{% block body %}
+	<body onLoad="init()">
+{% endblock %}
 {% block base-main %}
 	{% load widget_mod %}
 	{% load field_mod %}
@@ -27,4 +30,11 @@
 			{% endif %}
 		{% endfor %}
 	</div>
+	<script>
+		function init()	{
+		{% for fieldName, fieldValue in WaitLane.items %}
+			showGeoJsonOnMap("map_{{fieldName}}","/media/{{fieldValue}}");
+		{% endfor %}
+		}
+	</script>
 {% endblock %}
