--- a/WaitTimes/templates/WaitLanesBase.html
+++ b/WaitTimes/templates/WaitLanesBase.html
@@ -16,7 +16,9 @@
 		{% endblock %}
 	</title>
 </head>
-<body>
+{% block body %}
+	<body>
+{% endblock %}
 	<div class="container">
 		{% block base-main %}
 		{% endblock %}
