--- a/WaitTimes/WaitLanes/templates/WaitLaneForm.html
+++ b/WaitTimes/WaitLanes/templates/WaitLaneForm.html
@@ -2,7 +2,7 @@
 {% block base-main %}
 	{% load widget_mod %}
 	{% load field_mod %}
-	<form role="form" action="/WaitLanes/new" method="post" enctype="multipart/form-data">
+	<form role="form" action="{{ submitAction }}" method="post" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{ WaitLaneForm.non_field_errors }}
 		{% for field in WaitLaneForm %}
@@ -17,6 +17,6 @@
 				{% endif %}
 			</div>
 		{% endfor %}
-		<button type="submit" class="btn btn-default">Create</button>
+		<button type="submit" class="btn btn-default">{{ submitName }}</button>
 	</form>
 {% endblock %}
