added delete ability for waitlanes

--- a/WaitTimes/WaitLanes/templates/WaitLaneList.html
+++ b/WaitTimes/WaitLanes/templates/WaitLaneList.html
@@ -32,7 +32,7 @@
 						<li><a href="/WaitLanes/edit/{{ WaitLane.id }}/">edit</a></li>
 						<li><a href="/WaitLanes/view/{{ WaitLane.id }}/">view</a></li>
 						<li class="divider"></li>
-						<li><a href="#">delete</a></li>
+						<li><a href="/WaitLanes/delete/{{ WaitLane.id }}/">delete</a></li>
 					</ul>
 				</div>
 			</div>
