--- a/WaitTimes/WaitLanes/templates/WaitLaneForm.html
+++ b/WaitTimes/WaitLanes/templates/WaitLaneForm.html
@@ -1,5 +1,6 @@
 {% extends "WaitLanesBase.html" %}
 {% block base-main %}
+<div class="container">
 	{% load widget_mod %}
 	{% load field_mod %}
 	<div class="page-header">
@@ -40,4 +41,6 @@
 		{% endfor %}
 		<button type="submit" class="btn btn-default">{{ submitName }}</button>
 	</form>
+</div>
+
 {% endblock %}
