--- a/WaitTimes/WaitLanes/templates/WaitLaneList.html
+++ b/WaitTimes/WaitLanes/templates/WaitLaneList.html
@@ -7,6 +7,7 @@
 {% block base-main %}
 {% load widget_mod %}
 {% load field_mod %}
+<div class="container">
 	<div class="page-header">
 		<h1>Lineas de Espera <small>   currently {{ WaitLanes|length}}</small></h1>
 	</div>
@@ -42,4 +43,5 @@
 		</div>
 	</div>
 	{% endfor %}
+</div>
 {% endblock %}
